# minesweeper

./: Cargo.toml  memory.x  readme.md
.cargo/: config
src/: board.rs  game.rs  main.rs  sprites.rs  wiring.rs
