[package]
name = "minesweeper"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/pwr"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-rtic = "1.0.0"
panic-halt = "0.2.0"
klaptik = "0.0.3"
ssd1306 = "0.7.0"
stm32g0xx-hal = { version = "0.1.2", features = ["rt", "stm32g031"] }

[profile.dev]
incremental = false

[profile.release]
incremental = false
lto = true
opt-level = "z"
