[package]
name = "minesweeper"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/dotcypress/pwr"
version = "0.0.0"

[dependencies]
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
klaptik = { path = "../klaptik/", features = ["st7567"] }
stm32g0xx-hal = { git = "https://github.com/stm32-rs/stm32g0xx-hal.git", features = ["rt", "stm32g030"] }
wii-ext = "0.3.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"

